subsls - add is_finish data
